# NovaShell

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  CMakeLists.txt  COMMAND_REFERENCE.md  CONTRIBUTING.md  FEATURES.md  FINAL_SUMMARY.md  INSTALL.md  LATEST_FEATURES.md  LICENSE  NEW_FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  build.ps1  config.template.json  run-novashell.ps1  setup-dependencies.ps1  setup-msys2.ps1
include/ai/: advanced_completion.h  ai_module.h  ai_prompt_manager.h  command_suggester.h
include/analytics/: dashboard.h  performance_analytics.h
include/auth/: authentication.h
include/compat/: optional.h
include/containers/: container_manager.h
include/core/: command_processor.h  command_registry.h  shell.h  tab_completion.h
include/database/: db_manager.h  internal_db.h
include/env/: environment_manager.h
include/git/: git_manager.h
include/logging/: logger.h
include/mobile/: mobile_api.h
include/monitor/: system_monitor.h
include/network/: http_server.h  packet_analyzer.h
include/notes/: snippet_manager.h
include/p2p/: file_sharing.h
include/plugins/: plugin_manager.h
include/remote/: remote_desktop.h  ssh_server.h
include/scheduler/: task_scheduler.h
include/scripting/: script_engine.h
include/ui/: theme_manager.h
include/vault/: password_manager.h
include/vfs/: virtual_filesystem.h
include/voice/: voice_commander.h
install/: README.md  install.ps1  install.sh
plugins/: CMakeLists.txt
plugins/example_plugin/: CMakeLists.txt  example_plugin.cpp
src/: main.cpp
src/ai/: ai_module.cpp  ai_prompt_manager.cpp  command_suggester.cpp
src/analytics/: dashboard.cpp  performance_analytics.cpp
src/auth/: access_control.cpp  authentication.cpp  user_manager.cpp
src/containers/: container_manager.cpp
src/core/: command_processor.cpp  command_registry.cpp  shell.cpp  tab_completion.cpp
src/database/: db_manager.cpp  internal_db.cpp
src/env/: environment_manager.cpp
src/git/: git_manager.cpp
src/logging/: audit_trail.cpp  log_manager.cpp  logger.cpp
src/mobile/: mobile_api.cpp
src/monitor/: system_monitor.cpp
src/network/: http_server.cpp  packet_analyzer.cpp  packet_capture.cpp  protocol_parser.cpp
src/notes/: snippet_manager.cpp
src/p2p/: file_sharing.cpp
src/plugins/: plugin_loader.cpp  plugin_manager.cpp
src/remote/: remote_desktop.cpp  ssh_server.cpp
src/scheduler/: task_scheduler.cpp
src/scripting/: macro_manager.cpp  script_engine.cpp  script_parser.cpp
src/ui/: theme_manager.cpp
src/utils/: crypto_utils.cpp  file_utils.cpp  string_utils.cpp
src/vault/: encryption.cpp  password_manager.cpp  vault_storage.cpp
src/vfs/: file_recovery.cpp  mount_manager.cpp  virtual_filesystem.cpp
tests/: CMakeLists.txt
