cmake_minimum_required(VERSION 3.15)

# Unit tests would go here
# Requires a testing framework like Google Test

# Example:
# find_package(GTest REQUIRED)
# add_executable(unit_tests test_main.cpp)
# target_link_libraries(unit_tests GTest::GTest customos-shell-lib)
# add_test(NAME unit_tests COMMAND unit_tests)

message(STATUS "Tests directory - add test framework to enable testing")
